--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,21 @@
+Version 0.8.3 - 01 Jul, 2016 
+----------------------------
+- New: added A::app()->load() method that allows to load library files
+- New: added application libraries and files CLoader helper class
+- New: added global backtrace for application
+- New: namespaces support for modules
+- New: added SOAP vendor - nusoap
+- New: added OPAUTH vendor - opauth
+- Enh: minor changes in CDebug core class
+- Enh: minor changes in CHtml::link() method - added automatically added rel="nofollow noopener" for target="_new"
+- Enh: minor changes in helper CGeoLocation
+- Enh: translattion in Spanish for core messages
+- Enh: minor changes in CDatabase db class
+- Enh: added new options for DB-level caching: "auto" and "manual"
+- Bug: fixed non-working 'definedValues'=>'' attribute for label fields in CDataForm widget
+- Bug: fixed error on not defined PDO::MYSQL_ATTR_INIT_COMMAND for PHP < 5.3.6
+- Bug: fixed issue with key length for enccrypt functions in CHash.php
+
 
 Version 0.7.7 - 05 Dec, 2015
 ----------------------------
