--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-Version 1.3.x -
+Version 1.3.2 - 24 Jan, 2020
 ----------------------------
 - New: added CRecordEntity to ORM model
 - New: added phpunit tests
@@ -14,6 +14,7 @@ Version 1.3.x -
 - Enh: fixed wrong path of log file in CLogger component
 - Bug: fixed PHP7 syntax requirements in TCPDF vendor, CValidator helper
 - Bug: fixed overwriting existing vars in View rendeting
+
 
 Version 1.2.2 - 01 Jan, 2019
 ----------------------------
@@ -392,5 +393,3 @@ Version 0.0.1 - July 12, 2012 (Initial release)
 ----------------------------
 - New: created main structure
 - New: created main entry to the application /public/index.php
-
-
