--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,7 +6,7 @@ Version 1.4.x -
 Version 1.3.2 - 24 Jan, 2020
 ----------------------------
 - New: added CRecordEntity to ORM model
-- New: added phpunit tests
+- New: added PHPUnit tests
 - Enh: added possibility to use create() and update() methods in CActiveRecord
 - Enh: changes in components CHttpRequest
 - Enh: minor changes in database migrations
@@ -18,7 +18,7 @@ Version 1.3.2 - 24 Jan, 2020
 - Enh: added possibility for lazy loading of core components via config
 - Enh: fixed wrong path of log file in CLogger component
 - Bug: fixed PHP7 syntax requirements in TCPDF vendor, CValidator helper
-- Bug: fixed overwriting existing vars in View rendeting
+- Bug: fixed overwriting existing vars in View rendering
 
 
 Version 1.2.2 - 01 Jan, 2019
