Added chuck method for Active Records, code array => [] changes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ Version 1.4.x -
 ----------------------------
 - Enh: added possibility to hide system queries in debug panel
 - Enh: added possibility to close debug panel to minimum size
+- Enh: added possibility to get records by chunks with chuck() method of Active Record
 - Bug: fixed wrong assignment of _isRendered in CView
 
 
