--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-Version 1.4.x -
+Version 1.4.1 - 30 Jan, 2021
 ----------------------------
 - New: added new helper CSecureHeaders with possibility to define secure headers
 - Enh: added possibility to hide system queries in debug panel
