--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 1.5.x -
+----------------------------
+
+
 Version 1.4.1 - 30 Jan, 2021
 ----------------------------
 - New: added new helper CSecureHeaders with possibility to define secure headers
